src/objects/Patient_POT_Apt__c.object
<CustomObject>
    <description>A list of appointments,  for the patients plan of treatment.  The initial list is cloned from a template plan,  but after that it can be modified by the doctor.</description>
    <fields>
        <fullName>Appointment_Description__c</fullName>
        <label>Appointment Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Appointment</label>
        <referenceTo>Clinical_Appointment__c</referenceTo>
        <relationshipLabel>Patient POT Apts</relationshipLabel>
        <relationshipName>Patient_POT_Apts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Out__c</fullName>
        <label>Days Out</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Notes__c</fullName>
        <label>Doctor Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Time__c</fullName>
        <label>Lab Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Padding_Time__c</fullName>
        <label>Padding Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_POT__c</fullName>
        <label>Patient POT</label>
        <referenceTo>Patient_POT__c</referenceTo>
        <relationshipLabel>Patient POT Apts</relationshipLabel>
        <relationshipName>Patient_POT_Apts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Patient POT Apt</label>
    <nameField>
        <label>Patient POT Apt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient POT Apts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>